--- a/client/post.jade
+++ b/client/post.jade
@@ -32,7 +32,7 @@ template(name='post_view')
                         //     .ui.compact.large.circular.button.add_tag #{this}
                     +watson_view
                     
-                    // +comments
+                    +comments
                     // +viewing
                     .spacer
                     // .ui.divider
