--- a/client/watson.jade
+++ b/client/watson.jade
@@ -242,14 +242,14 @@ template(name='watson_view')
     +doc_sentiment
     +doc_emotion
     .ui.divider
-    // +concepts
+    +concepts
     .ui.divider
     +categories
     +entities
     // +semantic_roles
-    // +keyword_list
-    // +concept_list
-    // +keywords
+    +keyword_list
+    +concept_list
+    +keywords
     // .ui.hidden.divider
     // +relations
     //- if dev
