--- a/client/style.css
+++ b/client/style.css
@@ -389,7 +389,7 @@ body {
 
 .rounded {
   border-radius: 7px !important; 
-  transition: all 2s ease !important; 
+  transition: all 3s ease !important; 
   
   /*padding: 7px !important; */
 }
@@ -687,7 +687,7 @@ img, .image {
 
 input {
     /*margin: 7px !important;*/
-    border-radius:70px !important; 
+    /*border-radius:70px !important; */
 }
 @media only screen and (max-width: 765px) {
   .mobile,
