--- a/client/watson.jade
+++ b/client/watson.jade
@@ -30,7 +30,7 @@ template(name='small_sentiment')
 //- 
 template(name='doc_emotion') 
     div
-    +doc_sentiment
+    // +doc_sentiment
     // .spacer
     // .ui.dividing.header 
     //     | emotion
