--- a/client/style.css
+++ b/client/style.css
@@ -443,14 +443,14 @@ body {
     transition: all .1s linear !important; 
     cursor: pointer !important;
     color: black !important; 
-    font-size: 130% !important; 
+    /*font-size: 130% !important; */
     /*zoom: 105% !important;*/
     /*padding-top: 5em !important; */
     transform: scale(1.05) !important;
     z-index: 1000 !important;
     /*text-shadow: 0 20px 20px 20px rgba(50, 50, 100, 0.1) !important; */
     /*text-shadow: 0 0 3px grey !important;*/
-    filter: drop-shadow(0px 0px 5px white);    
+    /*filter: drop-shadow(0px 0px 5px white);    */
 }
 
 .zoomer {
@@ -489,10 +489,9 @@ img, .image {
 /*}*/
 .zoomer:hover {
     transition: all .15s ease !important; 
-    text-shadow: 0 0 3px grey !important;
-    filter: drop-shadow(0px 0px 3px white);    
+    /*text-shadow: 0 0 3px grey !important;*/
+    /*filter: drop-shadow(0px 0px 3px white);    */
     z-index: 1000 !important;
-    animation: fadein 1s !important;
     transform: scale(1.05) !important;
     animation: fadein 1s !important;
     animation: fadeout .25s; 
