--- a/client/fields.jade
+++ b/client/fields.jade
@@ -501,25 +501,26 @@ template(name='datetime_view')
 
 template(name='array_edit')
     .spacer
-    if i
-        i.grey.icon(class=i)
-        // +icon name=icon cl='ui avatar image'
-    .ui.inline.header
-        |#{field_value.length}
-        if title
-            |#{title}
-        else if label
-            |#{label}
-        else if key
-            |#{key}
-    .ui.icon.input
-        i.icon(class=i)
-        input.new_element(type='text' placeholder='+' autocomplete="off")
+    .spacer
+    // if icon
+    //     i.grey.icon(class=i)
+    //     // +icon name=icon cl='ui avatar image'
+    // .ui.inline.header
+    //     |#{field_value.length}
+    //     if title
+    //         |#{title}
+    //     else if label
+    //         |#{label}
+    //     else if key
+    //         |#{key}
+    .ui.icon.large.input
+        i.icon(class=icon)
+        input.new_element(type='text' placeholder="#{field_value.length} #{label}" autocomplete="off")
         //- +clear_value                
     if field_value
         each field_value
-            if currentUser
-                .ui.label.touch_element
+            if in_dev
+                .ui.basic.large.label.touch_element
                     i.delete.icon.remove_element
                     |#{this}
                 // .ui.compact.circular.button.pick_tag
