--- a/client/style.css
+++ b/client/style.css
@@ -242,13 +242,13 @@ body {
 /*}*/
 
 
-/*#iron-router-progress.spinner:before {*/
-/*	border-color : blue;*/
-/*}*/
-/*#iron-router-progress {*/
-/*	background-color : blue;*/
-/*	box-shadow       : 0 0 5px grey;*/
-/*}*/
+#iron-router-progress.spinner:before {
+	border-color : black;
+}
+#iron-router-progress {
+	background-color : black;
+	box-shadow       : 0 0 5px grey;
+}
 
 /*.accepted {*/
 /*	background-color : blue;*/
